# trlc-dk1

./: .gitignore  README.md  pyproject.toml
csrc/: CMakeLists.txt  bindings.cpp  control_loop.cpp  control_loop.h  dm_protocol.h  gravity_comp.cpp  gravity_comp.h  motor_defs.h  perf_counters.h  rt_utils.cpp  rt_utils.h  safety.h  serial_port.cpp  serial_port.h
csrc/tests/: test_dm_protocol.cpp  test_perf_counters.cpp
docs/: rt-scheduling.md
examples/: audio_keepalive.py  benchmark_cam_throughput.py  bi_teleop.py  bimanual_teleop.sh  calibration_follower.py  calibration_leader.ipynb  cam_viewer.py  debug_can_connectivity.py  delete_episode.py  identify_ports.py  identify_usb3_ports.py  measure_gravity.py  measure_jitter.py  measure_serial_latency.py  record_episode.sh  record_episode_bimanual.sh  record_named_poses.py  replay_episode.py  teleop.py  test_recorder_integration.py  test_rt_loop.py  trim_videos.py  upload_dataset.py
hardware/follower_parts/: dm-idler_v0.1.1.stl
hardware/follower_parts/gripper/: d405-camera-mount_v0.1.1.step  d405-camera-mount_v0.1.1.stl  uvc-camera-mount_v0.1.1.step  uvc-camera-mount_v0.1.1.stl
hardware/framing_STLs/: 3030-cam-extrusion-mount.stl
hardware/light_box/: LED Panel Holder center.stl  LED Panel Holder rear corner.stl  LED_Panel Holder front_corner.stl  TRLC-Light-Box_v0.step
lerobot_robot_trlc_dk1/: __init__.py  bi_follower.py  follower.py
lerobot_robot_trlc_dk1/recorder/: __init__.py  audio_feedback.py  auto_home_controller.py  dataset_writer.py  dk1_recorder.py  episode_manager.py  gesture_detector.py  jpeg_encoder.py  nvenc_encoder.py  recorder_thread.py  rest_pose_detector.py  state_machine.py  teleop_thread.py  terminal_ui.py  trim_policy.py
plan/: dk1-recorder-implementation.md  lerobot-record-analysis.md
profiles/cameras/: backlight_comp_hi.json  default_cam_profile.json
scripts/: cleanup_short_episodes.py  finalize_jpeg_recordings.py  verify_trim.py
tools/camera_profile/: __init__.py  app.py  index.html  profile.py  v4l2_controls.py
tools/dk1_inspector/: app.py  index.html
trlc_dk1_control/: config.py  gravity_comp.py  motor_chain.py  rt_robot.py
urdf/follower/: TRLC-DK1-Follower.urdf
