[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.4", "mujoco>=3.8.1"]
build-backend = "scikit_build_core.build"

[project]
name = "lerobot_robot_trlc_dk1"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0.1",
  "pyserial>=3.5",
  "dynamixel-sdk>=3.7.31",
  "lerobot==0.5.1",
  "huggingface-hub>=1.8",
  "mujoco>=3.8.1",
  "torch>=2.10.0",
  "torchcodec>=0.10.0",
  "torchvision>=0.25.0",
  "opencv-contrib-python>=4.10.0",
  "av>=14.0.0",
  "pyarrow>=18.0.0",
]
authors = [
  {name = "Jannik Grothusen", email = "jannik@robot-learning.co"},
]
maintainers = [
  {name = "Jannik Grothusen", email = "jannik@robot-learning.co"},
]

[project.scripts]
dk1-record = "lerobot_robot_trlc_dk1.recorder.dk1_recorder:main"

[project.optional-dependencies]
rt = []  # C++ extension is built by scikit-build-core when installed

[project.urls]
Homepage = "https://www.robot-learning.co/"
Documentation = "https://www.docs.robot-learning.co/"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchcodec = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[tool.scikit-build]
cmake.source-dir = "csrc"
cmake.build-type = "Release"
